; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_aacsbr.c_make_bands.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_aacsbr.c_make_bands.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32, i32)* @make_bands to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @make_bands(i32* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca float, align 4
  %13 = alloca float, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %14 = load i32, i32* %7, align 4
  %15 = sitofp i32 %14 to float
  %16 = load i32, i32* %6, align 4
  %17 = sitofp i32 %16 to float
  %18 = fdiv float %15, %17
  %19 = load i32, i32* %8, align 4
  %20 = sitofp i32 %19 to float
  %21 = fdiv float 1.000000e+00, %20
  %22 = call float @powf(float %18, float %21) #3
  store float %22, float* %12, align 4
  %23 = load i32, i32* %6, align 4
  %24 = sitofp i32 %23 to float
  store float %24, float* %13, align 4
  %25 = load i32, i32* %6, align 4
  store i32 %25, i32* %10, align 4
  store i32 0, i32* %9, align 4
  br label %26

26:                                               ; preds = %45, %4
  %27 = load i32, i32* %9, align 4
  %28 = load i32, i32* %8, align 4
  %29 = sub nsw i32 %28, 1
  %30 = icmp slt i32 %27, %29
  br i1 %30, label %31, label %48

31:                                               ; preds = %26
  %32 = load float, float* %12, align 4
  %33 = load float, float* %13, align 4
  %34 = fmul float %33, %32
  store float %34, float* %13, align 4
  %35 = load float, float* %13, align 4
  %36 = call i32 @lrintf(float %35)
  store i32 %36, i32* %11, align 4
  %37 = load i32, i32* %11, align 4
  %38 = load i32, i32* %10, align 4
  %39 = sub nsw i32 %37, %38
  %40 = load i32*, i32** %5, align 8
  %41 = load i32, i32* %9, align 4
  %42 = sext i32 %41 to i64
  %43 = getelementptr inbounds i32, i32* %40, i64 %42
  store i32 %39, i32* %43, align 4
  %44 = load i32, i32* %11, align 4
  store i32 %44, i32* %10, align 4
  br label %45

45:                                               ; preds = %31
  %46 = load i32, i32* %9, align 4
  %47 = add nsw i32 %46, 1
  store i32 %47, i32* %9, align 4
  br label %26

48:                                               ; preds = %26
  %49 = load i32, i32* %7, align 4
  %50 = load i32, i32* %10, align 4
  %51 = sub nsw i32 %49, %50
  %52 = load i32*, i32** %5, align 8
  %53 = load i32, i32* %8, align 4
  %54 = sub nsw i32 %53, 1
  %55 = sext i32 %54 to i64
  %56 = getelementptr inbounds i32, i32* %52, i64 %55
  store i32 %51, i32* %56, align 4
  ret void
}

; Function Attrs: nounwind
declare dso_local float @powf(float, float) #1

declare dso_local i32 @lrintf(float) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
